# DagAmendment

./: .gitignore  LICENSE.md  README.md  check_headers.py  make_releases.py
Accel/: .gitignore  Accel.cpp  CMakeLists.txt  blender_test.py  build-gcc.sh  build-mingw.bat  build-msvc16.bat  closest_point.h  test.bat  test.py
Accel/glm/detail/: func_common.inl  func_geometric_simd.inl
DagAmendment/: Brush.py  CachedProperty.py  ParametricShape.py  Projector.py  Ray.py  SamplePoints.py  SolvingVisualization.py  Stroke.py  ViewportState.py  __init__.py  blender_imgui.py  copy_from_install.bat  dag_amendment_operators.py  dev_operators.py  draw_utils.py  handlers.py  hyperparameter_properties.py  jfilter_registry.py  numpy_utils.py  operators.py  overlays.py  palettes.py  panels.py  param_operators.py  pools.py  preferences.py  profiling.py  profiling_properties.py  properties.py  props.py  registries_properties.py  registry_utils.py  shaders.py  smartgrab_operators.py  solver_registry.py  solver_utils.py  tools.py  utils.py  uv_coparam.py
DagAmendment/DepsgraphNodes/: __init__.py  align_utils.py  backend.py  nodes.py  operators.py  panels.py  preferences.py  properties.py
DagAmendment/JFilters/: AbstractJFilter.py  AverageJFilter.py  NegativeJFilter.py  NextJFilter.py
DagAmendment/Solvers/: AbstractScreenSpaceSolver.py  AbstractSolver.py  SingleDirectionSolver.py  StandardSolver.py
examples/: curtain.blend  furniture.blend  hardops.blend  planks.blend  radiator.blend  radiobox.blend  robot-arm.blend  teddy.blend
